--- a/.gitconfig
+++ b/.gitconfig
@@ -36,6 +36,7 @@
   summary = log --pretty=oneline
   active  = branch --contains 'HEAD@{2 weeks ago}'
   tree    = log --graph --pretty=oneline --abbrev-commit --decorate --color
+  forest  = log --graph --pretty=oneline --abbrev-commit --decorate --color --all
   recent  = log --graph --pretty=oneline --abbrev-commit --decorate --color -10
   message = log --format=format:%s -1
   last    = log --format=format:%H -1
