adds preview alias for 'diff --staged'

--- a/.gitconfig
+++ b/.gitconfig
@@ -41,3 +41,4 @@
   message = log --format=format:%s -1
   last    = log --format=format:%H -1
   revs    = log --format=format:%H
+  preview = diff --staged
